# EasyAuth

./: .dockerignore  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  LICENSE  NOTICE  README.md  README.zh-CN.md  docker-compose.deploy.yml  docker-compose.yml  manage.py  pnpm-lock.yaml  pyproject.toml
.github/workflows/: docker-build.yml
.omo/: boulder.json
.omo/evidence/: task-S1-cleanup-final.txt  task-S1-cleanup.txt  task-S1-curl-404-final.txt  task-S1-curl-404.txt  task-S1-curl-health-final.txt  task-S1-curl-health.txt  task-S1-flaky-repeat-2.txt  task-S1-install-uv-local.txt  task-S1-install-uv-tool.txt  task-S1-install.txt  task-S1-malformed-settings.txt  task-S1-port-check.txt  task-S1-pytest-all-final.txt  task-S1-pytest-all.txt  task-S1-red.txt  task-S1-ruff.txt  task-S1-runserver-final.txt  task-S1-runserver.txt  task-S1-scaffold.txt  task-S1-uv-python.txt  task-S10-acceptance-audit.txt  task-S10-authentik-context.txt  task-S10-authentik-sync.txt  task-S10-manual-curl.txt  task-S11-admin-seed.txt  task-S12-authentik-oidc-session.txt  task-S12-oidc-session.txt  task-S14-portal.txt  task-S2-S4-pytest-all-final.txt  task-S2-applications.txt  task-S2-model-verifier.txt  task-S2-surface-qa.txt  task-S3-accounts-audit.txt  task-S3-bulk-basedpyright.txt  task-S3-flaky-repeat-2.txt  task-S3-global-pytest-final.txt  task-S3-green-bulk-append-only.txt  task-S3-malformed-inputs.txt  task-S3-migrate-apply.txt  task-S3-pytest-final.txt  (+35 more)
.omo/plans/: easyauth-mvp-incremental-tdd-plan.md
.omo/start-work/: ledger.jsonl
deploy/: webhook-worker-entrypoint.sh
docs/: README.md
docs/api/: easyauth-authorization-operations-api-design.md  easyauth-console-api.md  easyauth-portal-react-api.md  easyauth-public-api.md
docs/architecture/: easyauth-architecture-design.md  easyauth-authorization-operations-design.md  easyauth-dingtalk-stream-design.md  easyauth-frontend-visual-contract.md  easyauth-managed-users-upstream-downstream-design.md
docs/audit/: audit_report_0705.md  audit_report_0710.md  audit_report_0711.md
docs/decisions/: ADR-001-业务授权运营边界.md  ADR-002-MANAGED_USERS管理范围契约.md
docs/design/platform-directory-notify/: 01-API契约-权威版.md  02-数据模型改动.md  03-Celery任务与投递管道.md  04-钉钉工作通知调研结论.md  05-安全设计.md  06-SDK接口设计.md  07-实施与发布计划.md  08-实施执行顺序-给实施agent.md  09-实施偏差记录.md  (+1 more)
docs/guides/: authentik-easyauth-automation-setup-llm.md  authentik-easyauth-ui-setup-human.md  easyauth-app-onboarding-wizard.md  easyauth-app-sdk-integration.md  local-admin-login.md  zero-to-full-deployment.md
docs/plans/: 2026-06-12-authentik-console-directory-integration-plan.md  2026-06-12-code-corruption-parallel-remediation-plan.md  2026-06-12-refactoring-remediation-plan.md  2026-07-01-easyauth-easytrade-visual-alignment-plan.md  2026-07-02-easyauth-easytrade-visual-consistency-remediation-plan.md  2026-07-02-easyauth-managed-users-remediation-plan.md  2026-07-06-lifecycle-approval-teams-plan.md  2026-07-07-netbird-connector-framework-plan.md  2026-07-07-netbird-server-fork-plan.md  easyauth-atomic-grants-and-console-app-refactor-2026-07-01.md  easyauth-atomic-grants-execution-00-overview-2026-07-01.md  easyauth-atomic-grants-execution-01-console-app-api-2026-07-01.md  easyauth-atomic-grants-execution-02-domain-models-and-grants-2026-07-01.md  easyauth-atomic-grants-execution-03-public-query-portal-requests-2026-07-01.md  easyauth-atomic-grants-execution-04-manifest-readiness-catalog-2026-07-01.md  easyauth-atomic-grants-execution-05-frontend-console-portal-2026-07-01.md  easyauth-mvp-implementation-plan.md  easyauth-mvp-solution-v2.md  easyauth-technical-plan.md
docs/requirements/: easyauth-business-authorization-operations.md
docs/specs/: easyauth-mvp.md
frontend/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: connector.spec.ts  smoke.spec.ts  visual-alignment.spec.ts
frontend/src/: App.tsx  main.tsx  styles.css
scripts/: code_health_scan.py
sdk/python/: CHANGELOG.md  README.md  pyproject.toml
sdk/python/src/easyauth_app_sdk/: __init__.py  client.py  descriptor.py  fastapi.py  integration.py  lifecycle.py  manifest.py  webhook.py
sdk/python/tests/: test_approvals_and_webhook.py  test_client.py  test_client_directory_notify.py  test_descriptor.py  test_fastapi.py  test_lifecycle.py  test_lifecycle_fastapi.py
src/easyauth/: frontend_shell.py
tests/: conftest.py  test_project_scaffold.py
typings/celery/: __init__.pyi
typings/dingtalk_stream/: __init__.pyi
typings/oauth2_provider/: generators.pyi  models.pyi
(+675 files in other folders)
