[project]
name = "easyauth"
version = "0.1.0"
description = "Internal authorization service baseline."
readme = "docs/README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
  "celery[redis]>=5.5,<5.6",
  "cryptography>=44,<50",
  "django>=5.2,<5.3",
  "django-oauth-toolkit>=3.0,<4.0",
  "djangorestframework>=3.16,<3.17",
  "pydantic>=2.12,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "pyyaml>=6.0,<7.0",
  "pyjwt[crypto]>=2.10,<3",
  "redis>=5.2,<6.0",
  "pyotp>=2.10.0",
  "webauthn>=3.0.0",
  "qrcode>=8.2",
]

[project.optional-dependencies]
dev = [
  "basedpyright>=1.34,<2",
  "django-stubs>=5.2,<6",
  "djangorestframework-stubs>=3.16,<3.17",
  "pytest>=8.4,<9",
  "pytest-django>=4.11,<5",
  "ruff>=0.13,<0.14",
  "uv>=0.8,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/easyauth"]

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
DJANGO_SETTINGS_MODULE = "easyauth.config.settings.test"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
# 自动生成的 Django 迁移不参与风格检查。
extend-exclude = ["**/migrations/**"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "D203",
  "D213",
  # 项目文档与 docstring 使用中文句号 。 结尾, D400/D415 的英文句点要求为全局误报。
  "D400",
  "D415",
  "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S603"]
"src/easyauth/config/settings/test.py" = ["F403"]
# SDK 是独立发布的零依赖包: 面向集成方的异常信息内联可读,
# 校验入口接受 Any, 可选框架依赖在函数内导入。
"sdk/**/*.py" = ["TRY003", "EM101", "EM102", "S101", "ANN401", "PLC0415"]
"sdk/**/tests/*.py" = ["INP001", "PLR2004", "S106"]

[tool.basedpyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "all"
reportMissingTypeStubs = "none"
venvPath = "."
venv = ".venv"
