[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "easyauth-app-sdk"
version = "0.2.0"
description = "EasyAuth 下游应用接入 SDK: 集成描述符端点与权限查询客户端"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
fastapi = ["fastapi>=0.110"]

[tool.setuptools.packages.find]
where = ["src"]
